--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
+  "homepage": "https://prakharsudele.github.io/Portfolio_Prakhar_Sudele",
   "name": "my-react-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "vite build",
+  "deploy": "gh-pages -d dist"
+}
+,
   "dependencies": {
     "aos": "^2.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-scripts": "^5.0.1",
     "react-tagcloud": "^2.3.3"
   },
   "devDependencies": {
@@ -23,6 +27,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
